--- a/main.css
+++ b/main.css
@@ -18,5 +18,15 @@ body
     outline: none;
 }
 
+.timer {
+    position: absolute;
+    left: 2em;
+    top: 2em;
+    padding: 1em;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    font-family: monospace;
+    font-size: xx-large;
+}
 
 /*# sourceMappingURL=main.css.map*/
